--- a/3d-orb/index.html
+++ b/3d-orb/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <title>Vite App</title>
   </head>
   <body>
     <canvas class="webgl"></canvas>
+    <nav>Sphere</nav>
+    <h1 class = "title">Give it a spin!</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
